--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "vike-react": "^0.6.5",
-    "vite-plugin-vercel": "^9.0.7",
-    "@vite-plugin-vercel/vike": "^9.0.6"
+    "vite": "^7.1.4"
   },
   "devDependencies": {
     "typescript": "^5.9.2",
-    "vite": "^7.1.4",
     "eslint": "^9.35.0",
     "@eslint/js": "^9.35.0",
     "typescript-eslint": "^8.42.0",
