--- a/package.json
+++ b/package.json
@@ -6,25 +6,28 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "vike": "^0.4.239",
     "@vitejs/plugin-react": "^5.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "styled-components": "^6.1.19",
+    "vike": "^0.4.239",
     "vike-react": "^0.6.5",
     "vite": "^7.1.4"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "eslint": "^9.35.0",
     "@eslint/js": "^9.35.0",
-    "typescript-eslint": "^8.42.0",
-    "globals": "^16.3.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-react": "^7.37.5",
-    "prettier": "^3.6.2",
     "@types/react": "^19.1.12",
-    "@types/react-dom": "^19.1.9"
+    "@types/react-dom": "^19.1.9",
+    "@types/styled-components": "^5.1.34",
+    "babel-plugin-styled-components": "^2.1.4",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0"
   },
   "type": "module"
 }
