--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "dev": "vike dev",
     "build": "vike build",
     "preview": "vike preview",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "generate-schema": "dotenv -c -- bash -c 'gql.tada generate schema https://graphql.datocms.com --header \"X-Exclude-Invalid: true\" --header \"Authorization: $DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN\"'",
+    "format": "npx prettier . --write"
   },
   "dependencies": {
+    "@datocms/cda-client": "^0.2.7",
     "@vitejs/plugin-react": "^5.0.2",
+    "gql.tada": "^1.8.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "styled-components": "^6.1.19",
@@ -20,6 +24,7 @@
     "@types/react-dom": "^19.1.9",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
