--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "styled-components": "^6.1.19",
     "vike": "^0.4.239",
     "vike-react": "^0.6.5",
-    "vite": "^7.1.4"
+    "vite": "^7.1.4",
+    "vite-plugin-cjs-interop": "^2.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
