--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/react": "^1.6.1",
     "@vitejs/plugin-react": "^5.0.2",
     "gql.tada": "^1.8.13",
+    "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "styled-components": "^6.1.19",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@types/styled-components": "^5.1.34",
