--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-image-gallery": "^1.4.0",
     "styled-components": "^6.1.19",
     "vike": "^0.4.239",
     "vike-react": "^0.6.5",
@@ -27,6 +28,7 @@
     "@types/lodash": "^4.17.20",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
     "dotenv-cli": "^10.0.0",
