update project dialog content
- add tags, active years
- add blurhas images

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gql.tada": "^1.8.13",
     "lodash": "^4.17.21",
     "react": "^19.1.1",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^19.1.1",
     "react-image-gallery": "^1.4.0",
     "styled-components": "^6.1.19",
