--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@datocms/cda-client": "^0.2.7",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@react-pdf/renderer": "^4.3.1",
     "gql.tada": "^1.8.13",
     "lodash": "^4.17.21",
     "next": "^16.0.0",
