fix pdf viewer issues
- mobile pdf viewer was not working, changed cv page to return plain pdf buffer

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,4 @@
 DATOCMS_PUBLISHED_CONTENT_CDA_TOKEN=
 DATOCMS_DRAFT_CONTENT_CDA_TOKEN=
 DATOCMS_SHOW_DRAFT_CONTENT=
+STATIC_FONT_URL=http://localhost:3000/fonts
